ConfigService based cert store should not blowup resolution on except.